<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="newtask_tasktitle">Enter task title:</string>
    <string name="newtaks_tasktitle_hint">Finish homework</string>
    <string name="newtask_tasksummary">Enter task summary:</string>
    <string name="newtaks_tasksummary_hint">Do OSC homework, all of the exercises</string>
    <string name="newtask_taskimportance">Enter task importance:</string>
    <string name="newtask_taskimportance_hint">1</string>
    <string name="newtask_tasksdisplay">No tasks to show</string>
</resources>
